y.output
Grammar

    0 $accept: line $end

    1 line: assignment ';'
    2     | exit_command ';'
    3     | print exp ';'
    4     | line assignment ';'
    5     | line print exp ';'
    6     | line exit_command ';'

    7 assignment: identifier '=' exp

    8 exp: exp '+' exp1
    9    | exp '-' exp1
   10    | exp1

   11 exp1: exp1 '*' term
   12     | exp1 '/' term
   13     | exp1 '%' term
   14     | term

   15 term: number
   16     | identifier
   17     | userdouble


Terminals, with rules where they appear

$end (0) 0
'%' (37) 13
'*' (42) 11
'+' (43) 8
'-' (45) 9
'/' (47) 12
';' (59) 1 2 3 4 5 6
'=' (61) 7
error (256)
print (258) 3 5
exit_command (259) 2 6
number (260) 15
identifier (261) 7 16
userdouble (262) 17


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
line (16)
    on left: 1 2 3 4 5 6, on right: 0 4 5 6
assignment (17)
    on left: 7, on right: 1 4
exp (18)
    on left: 8 9 10, on right: 3 5 7 8 9
exp1 (19)
    on left: 11 12 13 14, on right: 8 9 10 11 12 13
term (20)
    on left: 15 16 17, on right: 11 12 13 14


State 0

    0 $accept: . line $end

    print         shift, and go to state 1
    exit_command  shift, and go to state 2
    identifier    shift, and go to state 3

    line        go to state 4
    assignment  go to state 5


State 1

    3 line: print . exp ';'

    number      shift, and go to state 6
    identifier  shift, and go to state 7
    userdouble  shift, and go to state 8

    exp   go to state 9
    exp1  go to state 10
    term  go to state 11


State 2

    2 line: exit_command . ';'

    ';'  shift, and go to state 12


State 3

    7 assignment: identifier . '=' exp

    '='  shift, and go to state 13


State 4

    0 $accept: line . $end
    4 line: line . assignment ';'
    5     | line . print exp ';'
    6     | line . exit_command ';'

    $end          shift, and go to state 14
    print         shift, and go to state 15
    exit_command  shift, and go to state 16
    identifier    shift, and go to state 3

    assignment  go to state 17


State 5

    1 line: assignment . ';'

    ';'  shift, and go to state 18


State 6

   15 term: number .

    $default  reduce using rule 15 (term)


State 7

   16 term: identifier .

    $default  reduce using rule 16 (term)


State 8

   17 term: userdouble .

    $default  reduce using rule 17 (term)


State 9

    3 line: print exp . ';'
    8 exp: exp . '+' exp1
    9    | exp . '-' exp1

    ';'  shift, and go to state 19
    '+'  shift, and go to state 20
    '-'  shift, and go to state 21


State 10

   10 exp: exp1 .
   11 exp1: exp1 . '*' term
   12     | exp1 . '/' term
   13     | exp1 . '%' term

    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24

    $default  reduce using rule 10 (exp)


State 11

   14 exp1: term .

    $default  reduce using rule 14 (exp1)


State 12

    2 line: exit_command ';' .

    $default  reduce using rule 2 (line)


State 13

    7 assignment: identifier '=' . exp

    number      shift, and go to state 6
    identifier  shift, and go to state 7
    userdouble  shift, and go to state 8

    exp   go to state 25
    exp1  go to state 10
    term  go to state 11


State 14

    0 $accept: line $end .

    $default  accept


State 15

    5 line: line print . exp ';'

    number      shift, and go to state 6
    identifier  shift, and go to state 7
    userdouble  shift, and go to state 8

    exp   go to state 26
    exp1  go to state 10
    term  go to state 11


State 16

    6 line: line exit_command . ';'

    ';'  shift, and go to state 27


State 17

    4 line: line assignment . ';'

    ';'  shift, and go to state 28


State 18

    1 line: assignment ';' .

    $default  reduce using rule 1 (line)


State 19

    3 line: print exp ';' .

    $default  reduce using rule 3 (line)


State 20

    8 exp: exp '+' . exp1

    number      shift, and go to state 6
    identifier  shift, and go to state 7
    userdouble  shift, and go to state 8

    exp1  go to state 29
    term  go to state 11


State 21

    9 exp: exp '-' . exp1

    number      shift, and go to state 6
    identifier  shift, and go to state 7
    userdouble  shift, and go to state 8

    exp1  go to state 30
    term  go to state 11


State 22

   11 exp1: exp1 '*' . term

    number      shift, and go to state 6
    identifier  shift, and go to state 7
    userdouble  shift, and go to state 8

    term  go to state 31


State 23

   12 exp1: exp1 '/' . term

    number      shift, and go to state 6
    identifier  shift, and go to state 7
    userdouble  shift, and go to state 8

    term  go to state 32


State 24

   13 exp1: exp1 '%' . term

    number      shift, and go to state 6
    identifier  shift, and go to state 7
    userdouble  shift, and go to state 8

    term  go to state 33


State 25

    7 assignment: identifier '=' exp .
    8 exp: exp . '+' exp1
    9    | exp . '-' exp1

    '+'  shift, and go to state 20
    '-'  shift, and go to state 21

    $default  reduce using rule 7 (assignment)


State 26

    5 line: line print exp . ';'
    8 exp: exp . '+' exp1
    9    | exp . '-' exp1

    ';'  shift, and go to state 34
    '+'  shift, and go to state 20
    '-'  shift, and go to state 21


State 27

    6 line: line exit_command ';' .

    $default  reduce using rule 6 (line)


State 28

    4 line: line assignment ';' .

    $default  reduce using rule 4 (line)


State 29

    8 exp: exp '+' exp1 .
   11 exp1: exp1 . '*' term
   12     | exp1 . '/' term
   13     | exp1 . '%' term

    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24

    $default  reduce using rule 8 (exp)


State 30

    9 exp: exp '-' exp1 .
   11 exp1: exp1 . '*' term
   12     | exp1 . '/' term
   13     | exp1 . '%' term

    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24

    $default  reduce using rule 9 (exp)


State 31

   11 exp1: exp1 '*' term .

    $default  reduce using rule 11 (exp1)


State 32

   12 exp1: exp1 '/' term .

    $default  reduce using rule 12 (exp1)


State 33

   13 exp1: exp1 '%' term .

    $default  reduce using rule 13 (exp1)


State 34

    5 line: line print exp ';' .

    $default  reduce using rule 5 (line)
